--- a/day02/Makefile
+++ b/day02/Makefile
@@ -6,14 +6,14 @@
 file_fns.o: file_fns.c
 	clang -c file_fns.c
 
-main.o: main.c
-	clang -c main.c
+day02.o: day02.c
+	clang -c day02.c
 
-main: main.o file_fns.o
-	clang main.o file_fns.o -o main
+day02: day02.o file_fns.o
+	clang day02.o file_fns.o -o day02
 
-run: main
-	./main
+run: day02
+	./day02
 
 clean :
-	rm main *.o
+	rm day02 *.o
