--- a/day02/CMakeLists.txt
+++ b/day02/CMakeLists.txt
@@ -3,8 +3,9 @@ project(day02 C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(day02 main.c
-        file_fns.c)
+add_executable(day02
+        file_fns.c
+        day02.c)
 
 configure_file(day02.csv
         ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
