--- a/day01/CMakeLists.txt
+++ b/day01/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 3.29)
-project(day01 C)
+cmake_minimum_required(VERSION 3.30)
+
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
+
+project(day01 LANGUAGES C CXX)
 
 add_executable(day01 day01.c)
 
