--- a/day01/Makefile
+++ b/day01/Makefile
@@ -3,14 +3,8 @@
 # target: dependencies
 #   action
 
-day01.o: day01.c
-	clang -c day01.c
+main:
+	clang -o main main.c
 
-day01: day01.o
-	clang day01.o -o day01
-
-run: day01
-	./day01
-
-clean :
-	rm day01 *.o
+clean:
+	rm main
