--- a/day02/Makefile
+++ b/day02/Makefile
@@ -3,17 +3,8 @@
 # target: dependencies
 #   action
 
-file_fns.o: file_fns.c
-	clang -c file_fns.c
+all: main.c
+	clang -o main main.c
 
-day02.o: day02.c
-	clang -c day02.c
-
-day02: day02.o file_fns.o
-	clang day02.o file_fns.o -o day02
-
-run: day02
-	./day02
-
-clean :
-	rm day02 *.o
+clean:
+	rm main
