--- a/day03/CMakeLists.txt
+++ b/day03/CMakeLists.txt
@@ -1,6 +1,11 @@
-cmake_minimum_required(VERSION 3.29)
-project(day03 C)
+cmake_minimum_required(VERSION 3.30)
+
+set(CMAKE_C_COMPILER clang)
+set(CMAKE_CXX_COMPILER clang++)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
-add_executable(day03 main.c)
+project(day03 LANGUAGES C CXX)
+
+add_executable(day03 day03.c)
